# RNNoiseCMake

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Include/: unistd.h
